--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             </a>
-          <a href="duduk_poriciti.html">
+          <a href="#">
             <div class="row" style="margin-top:10px">
             	<div class="col-md-12 navStacked">
                 	<div class="nav nav-default nav-stacked ui-nav">
@@ -117,7 +117,7 @@
             </div>
             </a>
 			
-		<a href="nirbahi_kathamo.html">
+		<a href="#">
             <div class="row" style="margin-top:10px">
             	<div class="col-md-12 navStacked">
                 	<div class="nav nav-default nav-stacked ui-nav">
@@ -128,7 +128,7 @@
             </a>
 			
 			
-			<a href="onobivag1.html">
+			<a href="#">
             <div class="row" style="margin-top:10px">
             	<div class="col-md-12 navStacked">
                 	<div class="nav nav-default nav-stacked ui-nav">
@@ -140,7 +140,7 @@
 			
 			
 		
-			<a href="ovijog.html">
+			<a href="#">
             <div class="row" style="margin-top:10px">
             	<div class="col-md-12 navStacked">
                 	<div class="nav nav-default nav-stacked ui-nav">
@@ -150,7 +150,7 @@
             </div>
             </a>
 			
-			<a href="poramorsho.html">
+			<a href="#">
             <div class="row" style="margin-top:10px">
             	<div class="col-md-12 navStacked">
                 	<div class="nav nav-default nav-stacked ui-nav">
