--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
 			
 			<div class="row">
 				
-					<p style="color:white;" class="description">
+					<p class="description">
 						কৃষকের জানালা কৃষকদের ফসলের নানা সমস্যার দ্রুত ও কার্যকরভাবে সমাধান দেওয়ার একটি ডিজিটাল প্রয়াস। এখানে ছবি দেখে কৃষক/ ব্যবহারকারী ফসলের যেকোন সমস্যা চিহ্নিত করতে পারেন এবং চিহ্নিত ছবিতে ক্লিক করলেই সমস্যার সমাধান মনিটরে ভেসে উঠে। প্রক্রিয়াটি চলমান।সম্মানিত ব্যবহারকারিগণের যে কোন মতামত কৃষকের জানালাকে আরো সমৃদ্ধ করবে । </p>
 			</div>
 			
